--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "ngmodal": "^2.0.1",
     "node": "^18.13.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
