--- a/angular.json
+++ b/angular.json
@@ -112,8 +112,22 @@
             "firebaseProject": "budget-management-2f326",
             "firebaseHostingSite": "budget-management-2f326"
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
